kind/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patch-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: patch-demo-ctr
        image: nginx
      - name: patch-demo-ctr-2
        image: redis
      
      tolerations:
      - effect: NoSchedule
        key: dedicated
        value: test-team
