kind/redis_loadbalance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: app
          image: dfrazzitta/basemvc
          ports:
            - name: web
              containerPort: 80
              protocol: TCP

---

kind: Service
apiVersion: v1
metadata:
  name: hello-world
  namespace: default
  annotations:
     
spec:
  type: LoadBalancer
  selector:
    app: hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web
